[package]
name = "injectionforge-cli"
version = "0.1.0"
edition = "2024"
description = "Injectionforge-cli is a command-line interface for InjectionForge, a tool that compiles Frida scripts into injectable libraries or executables, allowing them to inject themselves."
license = "GPL-3.0"
keywords = ["frida", "cargo", "injection"]
readme = "README.md"
authors = ["Quentin Rouland"]
repository = "https://github.com/qrouland/cargo-iforge"


[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "string"] }
dirs = "6"
serde_json = "1.0"
