[package]
name = "injectionforge-cli"
version = "0.1.0-dev"
edition = "2024"
description = "InjectionForge CLI is a command-line interface for InjectionForge"
license = "GPL-3.0"
keywords = ["frida", "cargo", "injection"]
readme = "README.md"
authors = ["Quentin Rouland"]
repository = "https://github.com/qrouland/cargo-iforge"


[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "string"] }
dirs = "6"
serde_json = "1.0"
